--- a/example/ios/Podfile
+++ b/example/ios/Podfile
@@ -1,6 +1,6 @@
 # Uncomment this line to define a global platform for your project
-# platform :ios, '9.0'
-source 'http://repo.baichuan-ios.taobao.com/baichuanSDK/AliBCSpecs.git'
+platform :ios, '10.0'
+# source 'http://repo.baichuan-ios.taobao.com/baichuanSDK/AliBCSpecs.git'
 # CocoaPods analytics sends network stats synchronously affecting flutter build latency.
 ENV['COCOAPODS_DISABLE_STATS'] = 'true'
 
@@ -26,6 +26,8 @@ end
 require File.expand_path(File.join('packages', 'flutter_tools', 'bin', 'podhelper'), flutter_root)
 
 flutter_ios_podfile_setup
+
+install! 'cocoapods', :disable_input_output_paths => true
 
 target 'Runner' do
   # use_frameworks!
