--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -12,7 +12,8 @@ dependencies:
   flutter:
     sdk: flutter
 
-  flutter_alibc: 0.0.21-nullsafety
+  flutter_alibc:
+    path: ../
     # When depending on this package from a real application you should use:
     #   flutter_alibc: ^x.y.z
     # See https://dart.dev/tools/pub/dependencies#version-constraints
